fixed nav bar alignment

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 /* header and navigation */
 .header {
-    padding: 20px;
+    padding: 35px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
@@ -27,9 +27,9 @@ h1 {
 }
 
 .nav li {
-    padding-top: -25px;
+    /* padding-top: -25px; */
     margin-right: 20px;
-    float: right;
+    float: left;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
@@ -48,6 +48,7 @@ a:hover {
 .hero {
     height: 800px;
     width: 100%;
+    padding: 0;
     margin-top: 0px;
     margin-bottom: 25px;
     background-image: url("./images/digital-marketing-meeting.jpg");
